[tool.poetry]
name = "ideabox"
version = "0.1.0"
description = ""
authors = ["Matthew  Edelen <84196639+mteam88@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
apscheduler = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
